--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 							<router-link to="/favs">Mes favoris</router-link>
 						</li>
 					</ul>
+					<div class="deezer-widget-player" data-src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=false&width=220&height=220&color=FFFFFF&layout=dark&size=medium&type=artist&id=215&app_id=1" data-scrolling="no" data-frameborder="0" data-allowTransparency="true" data-width="220" data-height="220"></div>
 				</div>
 			</nav>
 			
@@ -42,6 +43,15 @@
 				</router-view>
 			</transition>
 		</div>
+		<script>
+		(function(d, s, id) {
+		var js, djs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "https://e-cdns-files.dzcdn.net/js/widget/loader.js";
+		djs.parentNode.insertBefore(js, djs);
+		}(document, "script", "deezer-widget-loader"));</script>
+		
 		<script src="node_modules/fetch-jsonp/build/fetch-jsonp.js"></script>
 		<script type="module" src="main.js"></script>
 	</body>
