--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 							<router-link to="/favs">Mes favoris</router-link>
 						</li>
 					</ul>
-					<div class="deezer-widget-player" data-src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=false&width=220&height=220&color=FFFFFF&layout=dark&size=medium&type=artist&id=215&app_id=1" data-scrolling="no" data-frameborder="0" data-allowTransparency="true" data-width="220" data-height="220"></div>
+					<div id="dz-root"></div>
+					<div id="player" style="position: absolute; bottom: 0; left: 0;"></div>
 				</div>
 			</nav>
 			
@@ -43,15 +44,31 @@
 				</router-view>
 			</transition>
 		</div>
+		<script src="https://e-cdns-files.dzcdn.net/js/min/dz.js"></script>
 		<script>
-		(function(d, s, id) {
-		var js, djs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = "https://e-cdns-files.dzcdn.net/js/widget/loader.js";
-		djs.parentNode.insertBefore(js, djs);
-		}(document, "script", "deezer-widget-loader"));</script>
-		
+		DZ.init({
+			appId  : '1',
+			channelUrl : 'http://127.0.0.1:8080/channel.html',
+			player: {
+				container: 'player',
+				format: 'square',
+				size: 'small',
+				width : 220,
+				height : 220,
+				onload : function(){}
+			}
+		});
+		DZ.login(function(response) {
+			if (response.authResponse) {
+			console.log('Welcome!  Fetching your information.... ');
+			DZ.api('/user/me', function(response) {
+				console.log('Good to see you, ' + response.name + '.');
+			});
+			} else {
+			console.log('User cancelled login or did not fully authorize.');
+			}
+		}, {perms: 'basic_access,email'});
+		</script>
 		<script src="node_modules/fetch-jsonp/build/fetch-jsonp.js"></script>
 		<script type="module" src="main.js"></script>
 	</body>
