--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="css/main.css">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		
 		<title>Recherche</title>
+
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/main.css">
+
 		<script src="node_modules/fetch-jsonp/build/fetch-jsonp.js"></script>
 		<script src="node_modules/vue/dist/vue.js"></script>
 		<script src="node_modules/vue-router/dist/vue-router.js"></script>
@@ -28,11 +29,18 @@
 						<li>
 							<form @submit.prevent="goSearch">
 								<input type="text" placeholder="Rechercher" v-model="quickSearchInput">
+								<i class="fa fa-search"></i>
 							</form>
 							<!-- <router-link to="/search/">Recherche</router-link> -->
 						</li>
 						<li>
-							<router-link to="/favs">Mes favoris</router-link>
+							<router-link to="/favs"><i class="fa fa-heart"></i>Coups de cœur</router-link>
+						</li>
+						<li>
+							<router-link to="/favs/artistes"><i class="fa fa-user"></i>Artistes</router-link>
+						</li>
+						<li>
+							<router-link to="/favs/albums"><i class="fa fa-music"></i>Albums</router-link>
 						</li>
 					</ul>
 					<div id="widg-target" class="deezer-widget-player" data-src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=false&width=220&height=220&color=007FEB&layout=dark&size=medium&type=tracks&id=1079668&app_id=277922" data-scrolling="no" data-frameborder="0" data-allowTransparency="true" data-width="220" data-height="220"></div>
@@ -44,7 +52,7 @@
 				</router-view>
 			</transition>
 		</div>
-		<script type="module" src="js_src/main.js"></script>
+		<script type="module" src="js/main.js"></script>
 		<!-- <script src="bundle.js"></script> -->
 	</body>
 </html>
