--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,9 @@
 		
 		<title>Recherche</title>
 
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/main.css">
 
 		<script src="node_modules/fetch-jsonp/build/fetch-jsonp.js"></script>
@@ -16,7 +17,7 @@
 		<script src="node_modules/vue-router/dist/vue-router.js"></script>
 	</head>
 	<body>
-		<div id="app">
+		<div id="app" v-cloak>
 			<div id="loader-wrapper" v-if="loading">
 				<div id="loader"></div>
 			</div>
@@ -24,12 +25,12 @@
 				<div id="nav-wrapper">
 					<ul>
 						<li>
-							<router-link to="/">Deezweb</router-link>
+							<router-link to="/" class="tac italic"><img src="https://upload.wikimedia.org/wikipedia/fr/archive/0/00/20160629185524%21Deezer_logo.png" alt="Logo de l'application officielle Deezer">Non-officiel</router-link>
 						</li>
 						<li>
 							<form @submit.prevent="goSearch">
 								<input type="text" placeholder="Rechercher" v-model="quickSearchInput">
-								<i class="fa fa-search"></i>
+								<i class="fa fa-search" @click="goSearch"></i>
 							</form>
 							<!-- <router-link to="/search/">Recherche</router-link> -->
 						</li>
@@ -51,8 +52,10 @@
 				<router-view>
 				</router-view>
 			</transition>
+			<div id="purge" @click="purge" style="position: fixed; bottom: 1rem; right: 1rem; cursor: pointer; background-color: #cccccc; padding: .5rem 1rem; border-radius: 5px;">Vider le cache</div>
 		</div>
-		<script type="module" src="js/main.js"></script>
-		<!-- <script src="bundle.js"></script> -->
+		
+		<!-- <script type="module" src="js/main.js"></script> -->
+		<script src="bundle.js"></script>
 	</body>
 </html>
